Mon Jan  4 20:58:50 1999  Tim Janik  <timj@gtk.org>

	* gscanner.c: eliminated extraneous "register" qualifiers in variable
	declarations.

	* gmain.c: #undef events and revents which may have been defined in
 	sys/poll.h for SVR3,4 compatibility on some AIX systems. fix been
	provided by Philippe Defert <Philippe.Defert@cern.ch>.

Mon Jan  4 14:38:11 1999  Tim Janik  <timj@gtk.org>

	* glib.h: adjusted the g_strdup_a, g_strndup_a and g_strconcat3_a macros
	so their arguments get only evaluated once. changed g_strconcat3_a to
	have the same semantics as g_strconcat, i.e. if a certain argument is
 	NULL, the rest of the parameter list is skipped.

	* tests/alloca-test.c: removed #if/#endif G_HAVE_ALLOCA, we need to be
 	able to compile on all systems. added test for g_strconcat() semantics.

	* we need a alloca() replacement for !G_HAVE_ALLOCA rsn!

Mon Jan  4 02:58:13 CST 1999 Shawn T. Amundson <amundson@gtk.org>

        * Released GLib 1.1.12 

        * INSTALL:
          NEWS:
          README:
          configure.in:
	  glib.spec:
          docs/glib-config.1: version=1.1.12

	* tests/Makefile.am: fixed so it works properly with
	  builddir and srcdir.

Sun Jan  3 01:38:14 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* tests/Makefile.am:
	add array-test.c, tree-test.c

	* tests/array-test.c, tests/tree-test.c:
	New module, tests array family

	* tests/hash-test.c, tests/list-test.c, tests/slist-test.c,
	  tests/string-test.c, tests/node-test.c:
	Clean out cruft left over from testglib.

Sat Jan  2 22:42:25 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* Makefile.am, configure.in, tests/*:
	Added 'make check' tests, based on testglib code.

Sat Jan  2 19:52:45 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* glib.h, testglib.c:
	Added g_alloca, g_new_a, g_new0_a macros.

Sat Jan  2 16:45:44 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* testglib.c: Added g_strdup_printf check.

Fri Jan  1 21:58:40 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

	* glib.h: